samples/_failures_safe/1761333594_b4e9e2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_006a9b7b.c: In function ‘main’:
./samples/SAFE/__tmp_006a9b7b.c:193:9: error: expected expression at end of input
  193 |         fprintf(stderr,
      |         ^~~~~~~
./samples/SAFE/__tmp_006a9b7b.c:193:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_006a9b7b.c:193:9: error: expected declaration or statement at end of input
